# scion

./: go.mod
go/cs/: BUILD.bazel  main.go
go/cs/beaconing/: originator.go  propagator.go
go/cs/ifstate/: revoker.go
go/cs/segreq/: db.go  handler.go  helpers.go  splitter.go
go/lib/env/: env.go
go/lib/infra/messenger/: messenger.go
go/lib/infra/modules/segfetcher/: fetcher.go  pather.go  resolver.go  splitter.go
go/lib/infra/modules/seghandler/: seghandler.go
go/lib/infra/modules/segverifier/: segverifier.go
go/lib/infra/modules/trust/: inspector.go  provider.go
go/lib/infra/modules/trust/mock_trust/: BUILD.bazel  mock_verifier.go
go/lib/revcache/memrevcache/: memrevcache.go
go/lib/sciond/: apitypes.go  sciond.go
go/proto/: sign.go
go/sciond/: main.go
go/sciond/internal/fetcher/: fetcher.go
go/sciond/internal/servers/: handlers.go
go/tools/pushsegs/: BUILD.bazel  main.go
go/tools/showpaths/: paths.go
python/topology/: net.py  topo.py
topology/: Single.topo  Tiny.topo
